--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
+    background-color: rgb(173, 235, 241);
 }
 
 .image-item {
